--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-list/chemigation-permit-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-list/chemigation-permit-list.component.html
@@ -38,18 +38,23 @@
         </button>
     </div>
     <div class="modal-body">
-        <p *ngIf="countOfActivePermitsWithoutRenewalRecordsForCurrentYear < 1">
-            All active Chemigation Permits have renewal records for year {{currentYear}}.
-        </p>
-        <p *ngIf="countOfActivePermitsWithoutRenewalRecordsForCurrentYear > 0">
-            There are {{countOfActivePermitsWithoutRenewalRecordsForCurrentYear}} active Chemigation Permits that do not have a Renewal Record for year {{currentYear}}. 
-            Would you like to create renewal records for these permits? 
-            The renewal records will be assigned the status “Pending Renewal”
-        </p>
+        <div *ngIf="countOfActivePermitsWithoutRenewalRecordsForCurrentYear > 0; then havePermits else noPermits"></div>
+        <ng-template #havePermits>
+            <p>
+                There are {{countOfActivePermitsWithoutRenewalRecordsForCurrentYear}} active Chemigation Permits that do not have a Renewal Record for year {{currentYear}}. 
+                Would you like to create renewal records for these permits? 
+                The renewal records will be assigned the status “Pending Renewal”
+            </p>
+        </ng-template>
+        <ng-template #noPermits>
+            <p>
+                All active Chemigation Permits have Renewal Records for year {{currentYear}}.
+            </p>
+        </ng-template>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-zybach btn-sm" [disabled]="isPerformingAction ||
-            countOfActivePermitsWithoutRenewalRecordsForCurrentYear < 1" (click)="bulkCreateAnnualRenewals()">
+            !(countOfActivePermitsWithoutRenewalRecordsForCurrentYear > 0)" (click)="bulkCreateAnnualRenewals()">
             <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
             Continue
         </button>
