--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
@@ -62,19 +62,11 @@
 
         <div class="row col-6 mt-4">
             <div class="col-6 control-label text-right mb-2">
-                <label class="required"><strong>Applicant First Name: </strong></label>
+                <label class="required"><strong>Applicant Name: </strong></label>
             </div>
             <div class="col-6 text-left mb-2">
-                <input type="text" class="form-control" name="ApplicantFirstName"
-                    placeholder="First Name" required [(ngModel)]="model.ApplicantFirstName" />
-            </div>
-
-            <div class="col-6 control-label text-right mb-2">
-                <label class="required"><strong>Applicant Last Name: </strong></label>
-            </div>
-            <div class="col-6 text-left mb-2">
-                <input type="text" class="form-control" name="ApplicantLastName"
-                    placeholder="Last Name" required [(ngModel)]="model.ApplicantLastName" />
+                <input type="text" class="form-control" name="ApplicantName"
+                    placeholder="First Last" required [(ngModel)]="model.ApplicantName" />
             </div>
 
             <div class="col-6 control-label text-right mb-2">
