--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
@@ -20,6 +20,16 @@
             </div>
             <div class="row my-2">
                 <div class="col">
+                    <button (click)="generateReport()" [disabled]="isLoadingSubmit" class="btn btn-zybach btn-md mr-3 float-right">
+                        <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
+                        Generate Report
+                    </button>
+                    <select name="ReportTemplateID" class="form-control mr-3 float-right mb-2" style="width:auto; min-width: 100px;" [(ngModel)]="selectedReportTemplateID" required>
+                        <option value=""></option>
+                        <option *ngFor="let reportTemplate of reportTemplates" [value]="reportTemplate.ReportTemplateID">
+                            {{reportTemplate.DisplayName}}
+                        </option>
+                    </select>
                     <a class="btn btn-secondary btn-md float-right mr-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
                     ngbTooltip="Download Report as CSV"><i class="fas fa-download"></i></a>
                     <fresca-clear-grid-filters-button class="float-right mr-2" [grid]="chemigationPermitReportGrid">
