--- a/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
@@ -28,7 +28,7 @@
                             <div class="row col-6 mt-4">
 
                                 <div class="col-6 control-label text-right mb-2">
-                                    <label class="required"><strong>Well: </strong></label>
+                                    <label><strong>Well: </strong></label>
                                 </div>
                                 <div class="col-6 text-left mb-2">
                                     <input type="text" class="form-control" name="WellRegistrationID" [(ngModel)]="model.WellRegistrationID" [ngbTypeahead]="searchApi" />
