--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
@@ -40,6 +40,13 @@
                                 </div>
 
                                 <div class="col-6 control-label text-right mb-2">
+                                    <label><strong>Well: </strong></label>
+                                </div>
+                                <div class="col-6 text-left mb-2">
+                                    <a *ngIf="chemigationPermit.Well" routerLink="/wells/{{chemigationPermit.Well.WellRegistrationID}}">{{chemigationPermit.Well.WellRegistrationID}}</a>
+                                </div>
+
+                                <div class="col-6 control-label text-right mb-2">
                                     <label class="required"><strong>Permit Status: </strong></label>
                                 </div>
                                 <div class="col-6 text-left mb-2">
