--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
@@ -18,14 +18,14 @@
                     </zybach-water-year-select>
                 </div>
             </div>
-            <div class="row my-2">
-                <div class="col">
+            <div class="row ml-2">
+                <div class="col-auto">
                     <button (click)="generateReport()" [disabled]="isLoadingSubmit" class="btn btn-zybach btn-md mr-3 float-right">
                         <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                         Generate Report
                     </button>
                     <select name="ReportTemplateID" class="form-control mr-3 float-right mb-2" style="width:auto; min-width: 100px;" [(ngModel)]="selectedReportTemplateID" required>
-                        <option value=""></option>
+                        <option value="undefined" disabled>Select a Report Template</option>
                         <option *ngFor="let reportTemplate of reportTemplates" [value]="reportTemplate.ReportTemplateID">
                             {{reportTemplate.DisplayName}}
                         </option>
@@ -37,10 +37,11 @@
                 </div>
             </div>
             <div class="table-responsive">
-                <ag-grid-angular #chemigationPermitReportGrid style="width: 100%; height: 500px;" class="ag-theme-balham" [rowData]="rowData"
+                <ag-grid-angular #chemigationPermitReportGrid style="width: 100%; height: 800px;" class="ag-theme-balham" [rowData]="rowData" [rowSelection]="'multiple'"
                     [columnDefs]="columnDefs" [pagination]="true" [suppressMenuHide]="true" [paginationPageSize]="100" [pinnedBottomRowData]="pinnedBottomRowData"
                     (filterChanged)="onFilterChanged($event)" (gridReady)="onGridReady($event)">
                 </ag-grid-angular>
+                <div><span>{{getSelectedRows().length}} of {{getFilteredRowsCount()}} Selected</span></div>
             </div>
         </div>
     </div>
