--- a/Source/Zybach.Web/src/app/pages/reports-list/reports-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/reports-list/reports-list.component.html
@@ -18,8 +18,8 @@
     </div>
 </div>
 <div class="container">
-    <a class="btn btn-zybach btn-sm mr-3 float-right" routerLink="/reports/new"><span class="fas fa-plus"></span> New Report Template</a>
-    <button (click)="generateReport()" [disabled]="isLoadingSubmit" class="btn btn-zybach btn-sm mr-3 float-right">
+    <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/reports/new"><span class="fas fa-plus"></span> New Report Template</a>
+    <button (click)="generateReport()" [disabled]="isLoadingSubmit" class="btn btn-zybach btn-md mr-3 float-right">
         <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
         Generate Report
     </button>
