fix button arrangement at top of grid

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="row ml-2">
-                <div class="col-auto">
+                <div class="col">
                     <button (click)="generateReport()" [disabled]="isLoadingSubmit" class="btn btn-zybach btn-md mr-3 float-right">
                         <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                         Generate Report
