--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-list/chemigation-permit-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-list/chemigation-permit-list.component.html
@@ -42,9 +42,9 @@
         <div *ngIf="countOfActivePermitsWithoutRenewalRecordsForCurrentYear > 0; then havePermits else noPermits"></div>
         <ng-template #havePermits>
             <p>
-                There are {{countOfActivePermitsWithoutRenewalRecordsForCurrentYear}} active Chemigation Permits that do not have a Renewal Record for year {{currentYear}}. 
-                Would you like to create renewal records for these permits? 
-                The renewal records will be assigned the status “Pending Renewal”
+                There are {{countOfActivePermitsWithoutRenewalRecordsForCurrentYear | number: "1.0"}} active Chemigation Permits that do not have a renewal record for year {{currentYear}}. 
+                Would you like to create renewal records for these permits?<br />
+                The renewal records will be assigned the status "Pending Renewal".  Note: this action cannot be undone.
             </p>
         </ng-template>
         <ng-template #noPermits>
