--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -137,6 +137,20 @@
                                 </div>
                             </div>
 
+                            <div class="row col-12">
+                                <div class="col-6 text-right">
+                                    <p><strong>NDEE Amount: </strong></p>
+                                </div>
+                                <div class="col-6 text-left">
+                                    <p *ngIf="currentYearAnnualRecord.NDEEAmount">
+                                        ${{currentYearAnnualRecord.NDEEAmount | number: '1.2-2'}}
+                                    </p>
+                                    <em *ngIf="!currentYearAnnualRecord.NDEEAmount" class="text-muted">
+                                        N/A
+                                    </em>
+                                </div>
+                            </div>
+
                         </div>
 
                         <div class="row col-6">
