--- a/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
@@ -17,8 +17,11 @@
     <div class="container mt-2">
         <div class="row my-2">
             <div class="col">
-                <button type="button" class="btn btn-zybach btn-sm float-right" (click)="downloadCsv()"><span class="fas fa-download"></span> Download CSV</button>
-                <a class="btn btn-zybach btn-sm mr-3 float-right" routerLink="/new-well"><span class="fas fa-plus"></span> New Well</a>
+                <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/new-well"><span class="fas fa-plus"></span> New Well</a>
+                <button class="btn btn-secondary btn-md float-right mr-3" style="cursor: pointer;" (click)="downloadCsv()" placement="top"
+                ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
+                <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="wellsGrid">
+                </fresca-clear-grid-filters-button>
             </div>
         </div>
         <ag-grid-angular #wellsGrid style="width: 100%; height: 500px;" class="ag-theme-balham" [rowData]="wells"
