--- a/Source/Zybach.Web/src/app/pages/user-list/user-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/user-list/user-list.component.html
@@ -21,18 +21,23 @@
   </div>
 </div>
 <div class="container">
-  <!-- TODO: uncomment when invite user and download csv are implemented -->
-    <div style="margin: 1rem 0 1rem 0;" class="float-right">
-        <a class="btn btn-zybach btn-sm mr-3" routerLink="/invite-user">Invite User</a>
-        <a class="btn btn-secondary btn-sm" style="cursor: pointer;" (click)="exportToCsv()" placement="top" ngbTooltip="Download list of Users"><i
-          class="fas fa-download"></i></a>
-    </div>
-    <h2 class="d-inline-block">All Users</h2>
-    <p class="lead">
-        A list of users is shown in the grid below.
-    </p>
+  
 </div>
-<div class="container mt-sm-4">
+<div class="container mt-2">
+  <h2 class="d-inline-block">All Users</h2>
+  <p class="lead">
+    A list of users is shown in the grid below.
+  </p>
+  <div class="row my-2">
+    <div class="col">
+      <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/invite-user">Invite User</a>
+      <button class="btn btn-secondary btn-md float-right mr-3" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
+      ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
+      <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="usersGrid">
+      </fresca-clear-grid-filters-button>
+    </div>
+  </div>
+
   <div class="table-responsive">
     <ag-grid-angular #usersGrid style="width: 100%; height: 800px;" class="ag-theme-balham" [rowData]="rowData"
       [columnDefs]="columnDefs" [pagination]="true" [paginationPageSize]="100">
