--- a/Source/Zybach.Web/src/app/pages/well-map/well-map.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-map/well-map.component.html
@@ -12,7 +12,7 @@
             </ng-template>
         </ng-select>
     </div>
-    <div class="col-12 col-lg-6 py-1">
+    <div class="col-12 col-lg-6">
         <div class="input-group">
             <input type="text" name="mapSearchQuery" class="form-control" placeholder="Search map by address..."
                 [(ngModel)]="mapSearchQuery" (keyup.enter)="mapSearch()" />
