--- a/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
@@ -28,14 +28,6 @@
                             <div class="row col-6 mt-4">
 
                                 <div class="col-6 control-label text-right mb-2">
-                                    <label><strong>Well: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    <input type="text" class="form-control" name="WellRegistrationID" [(ngModel)]="model.WellRegistrationID" [ngbTypeahead]="searchApi" placeholder="Search by Reg #" />
-                                    <small class="form-text text-muted font-italic" *ngIf="searchFailed">Suggestions could not be loaded.</small>
-                                </div>
- 
-                                <div class="col-6 control-label text-right mb-2">
                                     <label class="required"><strong>Permit Status: </strong></label>
                                 </div>
                                 <div class="col-6 text-left mb-2">
@@ -46,7 +38,7 @@
                                 </div>
 
                                 <div class="col-6 control-label text-right mb-2">
-                                    <label class="required"><strong>Chemigation Permit Number: </strong></label>
+                                    <label class="required"><strong>Permit Number: </strong></label>
                                 </div>
                                 <div class="col-6 text-left mb-2">
                                     <input type="number" class="form-control" name="ChemigationPermitNumber"
@@ -56,15 +48,14 @@
                             </div>
     
                             <div class="row col-6 mt-4">
-
                                 <div class="col-6 control-label text-right mb-2">
-                                    <label class="required"><strong>Township-Range-Section: </strong></label>
+                                    <label><strong>Well: </strong></label>
                                 </div>
                                 <div class="col-6 text-left mb-2">
-                                    <input type="text" class="form-control" name="TownshipRangeSection"
-                                        placeholder="Township-Range-Section" required [(ngModel)]="model.TownshipRangeSection" />
+                                    <input type="text" class="form-control" name="WellRegistrationID" [(ngModel)]="model.WellRegistrationID" [ngbTypeahead]="searchApi" placeholder="Search by Reg #" />
+                                    <small class="form-text text-muted font-italic" *ngIf="searchFailed">Suggestions could not be loaded.</small>
                                 </div>
-
+ 
                                 <div class="col-6 control-label text-right mb-2">
                                     <label class="required"><strong>County: </strong></label>
                                 </div>
