--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-edit-record/chemigation-permit-edit-record.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-edit-record/chemigation-permit-edit-record.component.html
@@ -5,7 +5,7 @@
         </li>
         <li class="breadcrumb-item" aria-current="page">
             <a routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}">
-                Chemigation Permit #{{chemigationPermit?.ChemigationPermitNumber}}
+                Chemigation Permit #{{chemigationPermit?.ChemigationPermitNumberDisplay}}
             </a>
         </li>
         <li class="breadcrumb-item active" aria-current="page">
@@ -17,7 +17,7 @@
     <app-alert-display></app-alert-display>
     <div class="row mt-2">
         <div class="col-12">
-            <h2 class="d-inline-block">Edit Annual Record for {{model?.RecordYear}}</h2>
+            <h2 class="d-inline-block">Edit {{model?.RecordYear}} Record for #{{chemigationPermit.ChemigationPermitNumberDisplay}}</h2>
         </div>
 
     </div>
@@ -52,7 +52,7 @@
                                     <label><strong>Chemigation Permit Number: </strong></label>
                                 </div>
                                 <div class="col-6 text-left mb-2">
-                                    {{chemigationPermit.ChemigationPermitNumber}}
+                                    {{chemigationPermit.ChemigationPermitNumberDisplay}}
                                 </div>
 
                             </div>
@@ -63,13 +63,6 @@
                                 </div>
                                 <div class="col-6 text-left mb-2">
                                     {{model.RecordYear}}
-                                </div>
-
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label><strong>Township-Range-Section: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    {{chemigationPermit.TownshipRangeSection}}
                                 </div>
 
                                 <div class="col-6 control-label text-right mb-2">
