--- a/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
@@ -60,9 +60,9 @@
                                     <label class="required"><strong>County: </strong></label>
                                 </div>
                                 <div class="col-6 text-left mb-2">
-                                    <ng-select [(ngModel)]="model.ChemigationCountyID"
-                                        [items]="chemigationCounties" bindLabel="ChemigationCountyDisplayName" bindValue="ChemigationCountyID" 
-                                        placeholder="Choose One" name="ChemigationCountyID" required>
+                                    <ng-select [(ngModel)]="model.CountyID"
+                                        [items]="counties" bindLabel="CountyDisplayName" bindValue="CountyID" 
+                                        placeholder="Choose One" name="CountyID" required>
                                     </ng-select>
                                 </div>
                             </div>
