--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-add-record/chemigation-permit-add-record.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-add-record/chemigation-permit-add-record.component.html
@@ -60,7 +60,7 @@
                                     <label><strong>County: </strong></label>
                                 </div>
                                 <div class="col-6 text-left mb-2">
-                                    {{chemigationPermit.ChemigationCounty.ChemigationCountyDisplayName}}
+                                    {{chemigationPermit.County.CountyDisplayName}}
                                 </div>
 
                             </div>
