--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -22,7 +22,7 @@
         <div class="col-12 col-sm-6">{{chemigationPermit.ChemigationPermitStatus.ChemigationPermitStatusDisplayName}}
         </div>
         <div class="col-12 col-sm-6 label"><strong>County: </strong></div>
-        <div class="col-12 col-sm-6">{{chemigationPermit.ChemigationCounty.ChemigationCountyDisplayName}}</div>
+        <div class="col-12 col-sm-6">{{chemigationPermit.County.CountyDisplayName}}</div>
     </div>
     <div class="row container">
         <div class="col-12">
