fix spacing of rich text above grid

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
@@ -1,7 +1,7 @@
 <div class="container navCaretMargin">
     <app-alert-display></app-alert-display>
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 mb-2">
             <h2 class="d-inline-block">Chemigation Permit Reports</h2>
             <custom-rich-text [customRichTextTypeID]="richTextTypeID"></custom-rich-text>
         </div>
