--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-edit-record/chemigation-permit-edit-record.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-edit-record/chemigation-permit-edit-record.component.html
@@ -17,7 +17,7 @@
     <app-alert-display></app-alert-display>
     <div class="row mt-2">
         <div class="col-12">
-            <h2 class="d-inline-block">Edit {{model?.RecordYear}} Record for #{{chemigationPermit.ChemigationPermitNumberDisplay}}</h2>
+            <h2 class="d-inline-block">Edit {{model?.RecordYear}} Record for #{{chemigationPermit?.ChemigationPermitNumberDisplay}}</h2>
         </div>
 
     </div>
