chemigation inspection index page with grid working, TODO: add new rich text entry for inspections index page

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -128,6 +128,9 @@
                     <a routerLink="/chemigation-permits" class="dropdown-item">
                         Chemigation Permits
                     </a>
+                    <a routerLink="/chemigation-inspections" class="dropdown-item">
+                        Chemigation Inspections
+                    </a>
                     <a routerLink="/" class="dropdown-item disabled">
                         Water Quality Inspections
                     </a>
